@@ -1,4 +1,6 @@
 0.09
+ [Common]
+ - Update Module::Install to 1.21 version.
 
 0.08 2021-02-21T01:47:43+01:00
  [Common]
